# Viscaria

./: .ci-recheck  .gitignore  README.md  SPECIFICATION.html
.github/: pull_request_template.md
.github/workflows/: ci.yml  format-agent-table-store.yml  pages.yml
docs/dev/: ajisai-cell-addressing.md  ajisai-functional-foundations.md  ajisai-table-oriented-language-plan.md  numbers-first-priorities.md  table-store-foundation.md
rust/: Cargo.toml  rust-toolchain.toml
rust/src/: lib.rs
rust/src/table_core/: cell_value.rs  mod.rs  table_store.rs
rust/src/types/: continued_fraction.rs  fraction.rs  fraction_arithmetic.rs  fraction_mcdc_tests.rs  mod.rs
web/: app.js  index.html  styles.css  version.js
web/images/: README.md
